--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Patua+One' rel='stylesheet' type='text/css'>
+    <link rel="icon" 
+      type="image/png" 
+      href="favicon.png">
   </head>
   <body>
     <div id="container">
