--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <link href="style.css" rel="stylesheet">
     <title>Daniel Otero Avalle</title>
     <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Patua+One' rel='stylesheet' type='text/css'>
+<link href="https://fonts.googleapis.com/css?family=Aref+Ruqaa" rel="stylesheet"> 
     <link rel="icon" 
       type="image/png" 
-      href="favicon.png">
+      href="favicon.ico">
   </head>
   <body>
     <div id="container">
@@ -17,14 +17,14 @@
       <div id="navbar">
         <ul>
           <li><a href="cv.pdf">CURRICULUM VITAE</a></li>
-          <li><a href="https://github.com/d-otero">GITHUB</a></li>
+          <li><a href="https://github.com/addja">GITHUB</a></li>
           <li><a href="#" onclick="showContact()">CONTACT</a>
-            <div id="contactBox"><a id="contactText">daniel.oteroavalle@gmail.com</a></div>
+            <div id="contactBox"><a id="contactText">daniel.oteroavalle[at]gmail.com</a></div>
           </li>
         </ul>
       </div>
       <div id="foot">
-        <h2>professional computer scientist | amateur philosopher and musician</h2>
+        <h2>professional computer scientist | amateur thinker and musician</h2>
       </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
