Randomized the time growth of the trees

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       type="image/png" 
       href="favicon.ico">
   </head>
-  <body onload="updateCanvasSize(); fractalTree(1)" onresize="updateCanvasSize()">
+  <body onload="updateCanvasSize(); fractalTree()" onresize="updateCanvasSize()">
     <div id="container">
       <h1>Daniel Otero Avalle</h1>
       <div id="navbar">
