Background and some minor imporvements

--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8" />
     <link href="style.css" rel="stylesheet">
     <title>Daniel Otero Avalle</title>
-    <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Patua+One' rel='stylesheet' type='text/css'>
-<link href="https://fonts.googleapis.com/css?family=Aref+Ruqaa" rel="stylesheet"> 
+    <link href='https://fonts.googleapis.com/css?family=Comfortaa|Arsenal:700|Aref+Ruqaa' rel='stylesheet' type='text/css'>
     <link rel="icon" 
       type="image/png" 
       href="favicon.ico">
@@ -15,13 +13,10 @@
     <div id="container">
       <h1>Daniel Otero Avalle</h1>
       <div id="navbar">
-        <ul>
-          <li><a href="cv.pdf">CURRICULUM VITAE</a></li>
-          <li><a href="https://github.com/addja">GITHUB</a></li>
-          <li><a href="#" onclick="showContact()">CONTACT</a>
-            <div id="contactBox"><a id="contactText">daniel.oteroavalle[at]gmail.com</a></div>
-          </li>
-        </ul>
+			  <h3><a href="cv.pdf">CURRICULUM VITAE</a><br \>
+				<a href="https://github.com/addja">GITHUB</a><br \>
+          <a href="#" onclick="showContact()">CONTACT</a>
+		  <div id="contactBox"><a id="contactText">daniel.oteroavalle[at]gmail.com</a></div></h3>
       </div>
       <div id="foot">
         <h2>professional computer scientist | amateur thinker and musician</h2>
