Update website and cv

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		  <div id="contactBox"><a id="contactText">daniel.oteroavalle[at]gmail.com</a></div></h3>
       </div>
       <div id="foot">
-        <h2>professional computer scientist & software engineer</h2>
+		<h2>software engineer & aspiring indie game dev</h2>
       </div>
     </div>
 	<canvas id="myCanvas">
